MacViews: support Views device permission prompt

This is a straightforward conversion. The Views implementation is moved ontoo
Mac, and a shim added for the Cocoa implementation to optionally summon the
Views version of the dialog. Screenshots of both dialogs are attached to the
bug.

BUG=610430

Review-Url: https://codereview.chromium.org/1989543002
Cr-Commit-Position: refs/heads/master@{#394252}

Former-commit-id: b74909cbced955d38dd10db3dbb0252d32a5f91b